# cargo-ninja

./: Cargo.toml  README.org  TODO.org  build-plan.json
src/: build_plan.rs  cli.rs  crate_type.rs  custom_build.rs  main.rs  rustc_config.rs
