[package]
name = "cargo-ninja"
description = "Generate build.ninja for Cargo build plan"
version = "0.1.0"
edition = "2021"
default-run = "cargo-ninja"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
# ninja-files-data = { git="https://git.sr.ht/~declantsien/ninja-files", branch = "command_cwd"}
# ninja-files = { git = "https://git.sr.ht/~declantsien/ninja-files", branch = "command_cwd"}
ninja-files-data.path = "/home/declan/src/ninja-files/lib/data"
ninja-files.path = "/home/declan/src/ninja-files/"
snailquote = "0.3"
camino = { version = "1.1.4", features = ["serde1"] }

[[bin]]
name = "exec"

[[bin]]
name = "configure"
