[package]
name = "cargo-ninja"
description = "Generate build.ninja for Cargo build plan"
version = "0.1.0"
edition = "2021"
default-run = "cargo-ninja"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
ninja-files-data = { git="https://git.sr.ht/~declantsien/ninja-files" }
ninja-files = { git = "https://git.sr.ht/~declantsien/ninja-files" }
cargo-util = "0.2"
cargo-util-schemas = "0.2"
snailquote = "0.3"
camino = { version = "1.1.4", features = ["serde1"] }
thiserror = "1.0"
anyhow = "1.0"

[[bin]]
name = "cargo-ninja-parser"
path = "src/bin/parser.rs"
