[package]
name = "cargo-ninja"
description = "Generate build.ninja for Cargo build plan"
version = "0.5.0"
edition = "2021"
default-run = "cargo-ninja"
license = "MIT"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
ninja-files-data = { package = "ninja-files-data2", version = "0.1" }
ninja-files = { package = "ninja-files2", version = "0.2" }
cargo_metadata = "0.18"
cargo-util = "0.2"
cargo-util-schemas = "0.2"
snailquote = "0.3"
camino = { version = "1.1.4", features = ["serde1"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo"] }
pathdiff = { version = "0.2", features = ["camino"]}